# wrangler-legacy

./: .dockerignore  .gitignore  .rusty-hook.toml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  README.md  RELEASE_CHECKLIST.md  SECURITY.md  azure-pipelines.yml  build.rs  definitely-not-azure-pipelines.yml  i18n.toml  mm  package-lock.json  package.json  rust-toolchain
.cargo/: audit.toml
.dependabot/: config.yml
.github/: CODEOWNERS  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_reap.md  bug_report.md  config.yml  feature_request.md
.github/ISSUE_TEMPLATE/workflows/: rust.yml
.github/workflows/: audit.yml  build.yml  install.yml  lint.yml  release.yml  rust.yml  test.yml
changelog-generator/: .gitignore  index.js  output-template.md  package-lock.json  package.json  template.md
ci/: azure-cache-rust-deps.yml  azure-create-tarball.yml  azure-install-node.yml  azure-install-rust.yml
docs/: environments.md  index.html  site.webmanifest
docs/_installer/: build-installer.rs  init.sh
docs/content/: environments.md  kv_commands.md  sites.md  webpack.md
i18n/en-US/: wrangler.ftl
npm/: README.md  binary-install.js  binary.js  install-wrangler.js  npm-shrinkwrap.json  package-lock.json  package.json  run-wrangler.js  uninstall-wrangler.js
pattern/: star
src/: cache.rs  emoji.rs  http.rs  i18n.rs  installer.rs  lib.rs  main.rs  process_builder.rs  settings.rs  util.rs  utils.rs  worker.rs  worker_bundle.rs
src/actors/: mod.rs
src/cli/: build.rs  cli_prelude.rs  config.rs  delete.rs  dev.rs  generate.rs  init.rs  kv.rs  login.rs  logout.rs  mod.rs  preview.rs  publish.rs  r2.rs  route.rs  secret.rs  subdomain.rs  tail.rs  whoami.rs  zone.rs
src/commands/: build.rs  cloudflared.rs  config.rs  delete.rs  generate.rs  init.rs  login.rs  logout.rs  mod.rs  preinstall.rs  preview.rs  publish.rs  r2.rs  report.rs  route.rs  secret.rs  subdomain.rs  tail.rs  upload.rs  upload_static_files.rs  whoami.rs  zone.rs
src/commands/cloudflared/: mod.rs
src/commands/config/: mod.rs
src/commands/delete/: api.rs  mod.rs
src/commands/dev/: headers.rs  mod.rs  session.rs  socket.rs  tls.rs  utils.rs  watch.rs
src/commands/generate/: mod.rs
src/commands/init/: mod.rs  subcommand.rs
src/commands/kv/: bucket.rs  create_namespace.rs  delete_bulk.rs  delete_key.rs  delete_namespace.rs  get_key.rs  list_keys.rs  list_namespaces.rs  mod.rs  read_key.rs  rename_namespace.rs  set_key.rs  write_bulk.rs  write_key.rs
src/commands/preview/: dev_server.rs  fiddle_messenger.rs  mod.rs  proxy.rs  request_payload.rs  test.rs  upload.rs
src/commands/publish/: krate.rs  mod.rs  package.rs  route.rs  script_upload_form.rs  worker_bundle.rs
src/commands/route/: mod.rs
src/commands/secret/: mod.rs
src/commands/subdomain/: mod.rs
src/commands/tail/: api.rs  event.rs  filter.rs  mod.rs  tail.rs  websocket.rs
src/commands/whoami/: mod.rs
src/deploy/: actors.rs  durable_objects.rs  mod.rs  route.rs  schedule.rs  zoned.rs  zoneless.rs
src/fixtures/: mod.rs  wrangler_toml.rs
src/http/: cf.rs  feature.rs  legacy.rs  mod.rs  v4.rs
src/http/kv/: create_namespace.rs  mod.rs
src/install/: dependencies.rs  equinox.rs  github.rs  krate.rs  mod.rs  target.rs
src/kv/: bulk.rs  key.rs  mod.rs
src/kv/namespace/: create.rs  delete.rs  list.rs  mod.rs  upsert.rs
src/login/: http.rs  mod.rs
src/preview/: fiddle_messenger.rs  http_method.rs  mod.rs  request_payload.rs  upload.rs
src/reporter/: mod.rs
src/settings/: binding.rs  environment.rs  global_config.rs  global_user.rs  http_config.rs  ignore.rs  metadata.rs  mod.rs  project.rs  tools.rs  wrangler_ignore.rs
src/settings/project/: kv_namespace.rs  mod.rs  project_type.rs
src/settings/toml/: actors.rs  builder.rs  bundle.rs  deploy_config.rs  deploy_target.rs  dev.rs  durable_objects.rs  environment.rs  kv_namespace.rs  manifest.rs  migrations.rs  mod.rs  r2_bucket.rs  route.rs  script_format.rs  services.rs  site.rs  target.rs  target_type.rs  triggers.rs
src/sites/: mod.rs  sync.rs  upload.rs
src/tail/: host.rs  log_server.rs  logger.rs  mod.rs  session.rs  shutdown.rs  tunnel.rs
src/terminal/: browser.rs  emoji.rs  interactive.rs  json.rs  message.rs  message_box.rs  mod.rs  styles.rs  utils.rs
src/upload/: krate.rs  mod.rs  package.rs
src/upload/form/: mod.rs  modules_worker.rs  plain_text.rs  project_assets.rs  service_worker.rs  text_blob.rs  wasm_module.rs
src/user/: account.rs  mod.rs  settings.rs
src/util/: version.rs
src/version/: mod.rs  version.rs  wrangler_version.rs
src/watch/: mod.rs  watcher.rs
src/workers/: mod.rs
src/wranglerjs/: bundle.rs  guarded_command.rs  mod.rs  output.rs
sum o/: sum of two numbers
tests/: build.rs  config.rs  dev.rs  generate.rs  help.rs  init.rs  integration.rs  live_preview.rs  namespace.rs  parse.rs  preview.rs  test_utils.rs  test_wrangler.toml  wrangler.rs
tests/end_to_end/kv_namespace_config/: README.md  test_env.sample.sh
tests/fixture/: mod.rs  rust.rs  wrangler_toml.rs
tests/fixtures/: mod.rs  wrangler_toml.rs
tests/fixtures/simple_rust/: Cargo.toml  package.json
tests/fixtures/webpack_function_config_js/: webpack.config.js
tests/fixtures/webpack_function_promise_config_js/: index.js  webpack.config.js
tests/fixtures/webpack_multiple_config/: package.json  webpack.config.js
tests/fixtures/webpack_multiple_specify_config/: webpack.worker.js
tests/fixtures/webpack_promise_config_js/: webpack.config.js
tests/fixtures/webpack_simple_js/: index.js
tests/fixtures/webpack_target_node/: webpack.config.js
tests/fixtures/webpack_target_web/: webpack.config.js
tests/fixtures/webpack_wast/: index.js  package.json  (+1 more)
tests/utils/: mod.rs
tests/webpack_single_js_missing_package_main/: package.json
tests/webpack_single_js_use_package_main/: index.js  package.json
tests/webpack_specify_config/: webpack.worker.js
worker/: README.md  index.js  package.json  wrangler.toml
wrangler-js/: index.js  package.json
wranglerjs/: index.js  package.json
(+102 files in other folders)
