[package]
name = "wrangler"
version = "1.9.2"
authors = ["The Wrangler Team <wrangler@cloudflare.com>", "Avery Harnish <averyharnish@gmail.com>", "Ashley Lewis <ashleymichal@gmail.com>", "Ashley Williams <ashley666ashley@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Command-line interface for all things Cloudflare Workers"
readme = "README.md"
repository = "https://github.com/cloudflare/wrangler"
categories = ["wasm", "development-tools", "command-line-utilities", "web-programming"]
build = "build.rs"

[dependencies]
atty = "0.2.14"
base64 = "0.12.1"
billboard = "0.1.0"
binary-install = "0.0.3-alpha.1"
chrome-devtools-rs = { version = "0.0.0-alpha.0", features = ["color"] }
chrono = "0.4.11"
clap = "2.33.1"
cloudflare = "0.6.6"
config = "0.10.1"
console = "0.11.3"
dirs = "2.0.2"
env_logger = "0.7.1"
exitfailure = "0.5.1"
failure = "0.1.8"
flate2 = "1.0.14"
fs2 = "0.4.3"
futures-util = "0.3"
http = "0.2.1"
hyper = "0.13.6"
hyper-tls = "0.4.1"
ignore = "0.4.16"
indicatif = "0.14.0"
lazy_static = "1.4.0"
log = "0.4.8"
notify = "4.0.15"
number_prefix = "0.4.0"
openssl = { version = '0.10.29', optional = true }
percent-encoding = "2.1.0"
predicates = "1.0.4"
prettytable-rs = "0.8.0"
rand = "0.7.3"
regex = "1"
reqwest = { version = "0.10.5", features = ["blocking", "json"] }
semver = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"
serde_with = "1.4.0"
tempfile = "3.1.0"
term_size = "0.3"
text_io = "0.1.8"
tokio = { version = "0.2", default-features = false, features = ["io-std", "time", "macros", "process", "signal", "sync"] }
tokio-tls = "0.3.1"
tokio-tungstenite = { version = "0.10.1", features = ["tls"] }
toml = "0.5.6"
twox-hash = "1.5.0"
url = "2.1.1"
uuid = { version = "0.8", features = ["v4"] }
which = "3.1.1"
ws = "0.9.1"

[dev-dependencies]
assert_cmd = "0.11.1"
fs_extra = "1.1.0"
predicates = "1.0.4"

[features]
# We build Linux binaries with vendored openssl
# to avoid SSL issues
vendored-openssl = ['openssl/vendored']

# Treat compiler warnings as a build error.
# This only runs in CI by default
strict = []
